--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
+    "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.3",
     "react-ts-tradingview-widgets": "^1.2.5",
